--- a/image_lazy_loading/index.html
+++ b/image_lazy_loading/index.html
@@ -10,27 +10,34 @@
 <body>
 <header class="header">
   <h1>There is no images!</h1>
-  <h2>Scroll bottom.</h2>
+  <h2>Scroll down</h2>
 </header>
 
 <section>
   <img
       alt="img"
-      data-src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/1024px-Unofficial_JavaScript_logo_2.svg.png"
+      data-src="./images/braydon-anderson-wOHH-NUTvVc-unsplash.jpg"
   />
 </section>
 
 <section>
   <img
       alt="img"
-      data-src="https://upload.wikimedia.org/wikipedia/commons/0/09/BEich.jpg"
+      data-src="./images/hussain-badshah-F-F44AmLHy8-unsplash.jpg"
   />
 </section>
 
 <section>
   <img
       alt="img"
-      data-src="https://upload.wikimedia.org/wikipedia/commons/7/75/Marc_Andreessen.jpg"
+      data-src="./images/magdalena-smolnicka-MySy-2bd930-unsplash.jpg"
+  />
+</section>
+
+<section>
+  <img
+      alt="img"
+      data-src="./images/matthew-henry-2Ts5HnA67k8-unsplash.jpg"
   />
 </section>
 
