Added intersection observer for video playback triggering

--- a/video_player_pause_unpause/index.html
+++ b/video_player_pause_unpause/index.html
@@ -10,8 +10,7 @@
 
 <body>
 <header class="header">
-  <h1>There is no video yet!</h1>
-  <h2>Scroll bottom.</h2>
+  <h2>Scroll down to see the video and autolaunch it</h2>
 </header>
 
 <section>
@@ -24,8 +23,8 @@
 </section>
 
 <section>
-  <h2>Scroll more to stop video</h2>
-  <h2>And then up to play it again</h2>
+  <h2>Continue to scroll down to pause the video</h2>
+  <h2>Scroll up to launch it again</h2>
 </section>
 
 </body>
