--- a/video_player_pause_unpause/index.html
+++ b/video_player_pause_unpause/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Parcel Sandbox</title>
+  <title>Video autolaunch</title>
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="./styles.css"/>
   <script src="./index.js" defer></script>
