--- a/nav_bar_anchors/index.html
+++ b/nav_bar_anchors/index.html
@@ -4,7 +4,7 @@
   <title>Nav bar anchors</title>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="./styles.css" />
-  <script src="./index.js"></script>
+  <script src="./index.js" defer></script>
 </head>
 
 <body>
